<resources>
    <string name="app_name">sepeda.in</string>
    <string name="pre_login_get_started"><b>GET STARTED</b></string>
    <string name="pre_login_already_have_an_account">Already have an account?</string>
    <string name="pre_login_login"><b>Login</b></string>
    <string name="get_us_to_know_you"><b>GET US TO\nKNOW YOU!</b></string>
    <string name="sign_me_up"><b>SIGN ME UP!</b></string>
    <string name="welcome_back"><b>WELCOME\nBACK!</b></string>
    <string name="login"><b>LOGIN</b></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up"><b>Sign Up</b></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="map">Map</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="hello_user">Hello, User!</string>
    <string name="user">User!</string>
    <string name="hello">Hello,</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="what_would_you_ride_today">What would you ride today?</string>
    <string name="bikes_near_you">Bikes near you</string>
    <string name="see_more">See More</string>
    <string name="recently_visited">Recently visited</string>
    <string name="what_s_your_first_name">What\'s your first name?</string>
    <string name="what_s_your_last_name">What\'s your last name?</string>
    <string name="phone_number">Phone Number</string>
    <string name="place_name">Place Name</string>
    <string name="placeimage">PlaceImage</string>
    <string name="_0_m_away">0 m away</string>
    <string name="order_now">Order Now</string>
    <string name="location_name">Location Name</string>
    <string name="_100_m_away">100 m away</string>
    <string name="location_formatted_name">Location Formatted Name</string>
    <string name="price">PRICE :</string>
    <string name="first_30_mins">First 30 mins</string>
    <string name="rp_10_000">Rp. 10.000,-</string>
    <string name="next_30_mins">Next 30 mins</string>
    <string name="rp_7_000">Rp. 7.000,-</string>
    <string name="book_now">BOOK NOW</string>
</resources>