<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".main.ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="32dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/tv_hello_homefragment"
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:text="@string/hello"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_hellouser_homefragment"
            style="@style/DefaultText"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/user"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_hello_homefragment" />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/profile_picture"
            android:scaleType="centerCrop"
            android:src="@drawable/default_profile"
            app:civ_border="false"
            app:civ_shadow="true"
            app:civ_shadow_color="@color/black"
            app:civ_shadow_gravity="bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_whatwouldride"
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:maxWidth="200dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/what_would_you_ride_today"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_hellouser_homefragment" />

        <TextView
            android:id="@+id/tv_bikesnearyou"
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/bikes_near_you"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_whatwouldride" />

        <TextView
            android:id="@+id/tv_seemorebikesnearyou_homefragment"
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:text="@string/see_more"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_whatwouldride" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_bikesnearyou"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_bikesnearyou" />

        <TextView
            android:id="@+id/tv_recentlyvisited"
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/recently_visited"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_bikesnearyou" />

        <TextView
            android:id="@+id/tv_seemorerecentlyvisited_homefragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_bikesnearyou"
            android:textSize="16sp"
            android:text="@string/see_more"
            style="@style/DefaultText"
            android:textStyle="bold"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="12dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recentlyvisited"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_recentlyvisited"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>