<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="225dp"
    android:layout_height="225dp"
    android:layout_marginHorizontal="12dp"
    android:background="@color/white"
    app:cardCornerRadius="25dp"
    app:cardElevation="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_placeimage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/placeimage"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_placename"
            style="@style/DefaultText"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/place_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_distance"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_distance"
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/_0_m_away"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_placeimage"
            app:layout_constraintStart_toStartOf="@id/iv_placeimage" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>