<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/box_orange"
    tools:context=".PreLoginActivity">

    <ImageView
        android:id="@+id/ivLogo_activity_pre_login"
        android:layout_width="140dp"
        android:layout_height="143dp"
        android:src="@drawable/logo_with_name_white"
        android:layout_marginBottom="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/btnGetStarted_activity_pre_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="50dp"
        android:text="@string/pre_login_get_started"
        android:textSize="15sp"
        android:fontFamily="@font/plus_jakarta_sans"
        android:background="@drawable/box_button"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/ivLogo_activity_pre_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tvAlreadyHaveAnAccount_activity_pre_login"
        android:text="@string/pre_login_already_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/plus_jakarta_sans"
        android:layout_marginEnd="60dp"
        app:layout_constraintTop_toBottomOf="@+id/btnGetStarted_activity_pre_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tvLogin_activity_pre_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:clickable="true"
        android:fontFamily="@font/plus_jakarta_sans"
        android:text="@string/pre_login_login"
        android:textColor="@color/white"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/tvAlreadyHaveAnAccount_activity_pre_login"
        app:layout_constraintTop_toBottomOf="@+id/btnGetStarted_activity_pre_login"/>
</androidx.constraintlayout.widget.ConstraintLayout>