<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".main.ui.map.MapFragment"
    android:paddingHorizontal="24dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/iv_profilepicture_profilefragment"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginTop="64dp"
            android:contentDescription="@string/profile_picture"
            android:scaleType="centerCrop"
            android:src="@drawable/default_profile"
            app:civ_border="false"
            app:civ_shadow="true"
            app:civ_shadow_color="@color/black"
            app:civ_shadow_gravity="bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_firstname_profilefragment"
            style="@style/DefaultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:autofillHints="name"
            android:hint="@string/what_s_your_first_name"
            android:inputType="text"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_profilepicture_profilefragment" />

        <EditText
            android:id="@+id/et_lastname_profilefragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DefaultText"
            android:textSize="16sp"
            android:inputType="text"
            android:autofillHints="name"
            android:textColorHint="@color/black"
            android:layout_marginTop="16dp"
            android:hint="@string/what_s_your_last_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_firstname_profilefragment" />

        <EditText
            android:id="@+id/et_phonenumber_profilefragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DefaultText"
            android:textSize="16sp"
            android:inputType="phone"
            android:textColorHint="@color/black"
            android:autofillHints="name"
            android:layout_marginTop="16dp"
            android:hint="@string/phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_lastname_profilefragment" />

        <Button
            android:id="@+id/btn_updateprofile_profilefragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="UPDATE PROFILE"
            android:fontFamily="@font/plus_jakarta_sans"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/box_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_phonenumber_profilefragment"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>