<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/box_orange"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clText_Boxes_activity_login"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clEmail_activity_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="70dp"
            android:background="@drawable/box_outline_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/ivEmailImage_activity_login"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/email_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail_activity_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:textColorHint="@color/grey"
                app:hintEnabled="false"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivEmailImage_activity_login">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail_activity_login"
                    android:hint="Email"
                    android:background="@null"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clPassword_activity_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/box_outline_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/ivPasswordImage_activity_login"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/password_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword_activity_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:textColorHint="@color/grey"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivPasswordImage_activity_login">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword_activity_login"
                    android:hint="Password"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvOpening_activity_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/welcome_back"
        android:textSize="40sp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/clText_Boxes_activity_login"
        app:layout_constraintStart_toStartOf="@+id/clText_Boxes_activity_login"/>

    <Button
        android:id="@+id/btnLogin_activity_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text="@string/login"
        android:textSize="15sp"
        android:fontFamily="@font/plus_jakarta_sans"
        android:background="@drawable/box_button"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/clText_Boxes_activity_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tvDontHaveAnAccount_activity_login"
        android:text="@string/don_t_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/plus_jakarta_sans"
        android:layout_marginEnd="60dp"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin_activity_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tvSignUp_activity_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:fontFamily="@font/plus_jakarta_sans"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/tvDontHaveAnAccount_activity_login"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin_activity_login"/>
</androidx.constraintlayout.widget.ConstraintLayout>